<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/auth_background">

    <LinearLayout
        android:id="@+id/resetPasswordRequestField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="24dp"
        android:visibility="visible"
        tools:visibility="gone">

        <TextView
            android:id="@+id/forgetPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forgetPasswordBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_body"
            android:gravity="center"
            android:textColor="@color/light_gray_500"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_email_container"
            style="@style/Theme.News.AuthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetPasswordEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/forget_password_email_field_hint"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgetPasswordButton"
            style="@style/button_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:text="@string/forget_password_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resetPasswordMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="24dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/forgetPasswordSuccessMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_success_message"
            android:gravity="center"
            android:textColor="@color/light_gray_500"
            android:textSize="16sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>