<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verified"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:text="@string/verification_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linkAuthTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/linkAuthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/verification_login_link"
        android:textColor="@color/light_gray_500"
        app:layout_constraintBottom_toTopOf="@id/sendEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/sendEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/verification_send_email"
        android:textColor="@color/light_gray_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linkAuthTextView"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_editor_absoluteX="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>