<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/blue_700"
        app:navigationIcon="@drawable/ic_arrow_back_24">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/profile_edit_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="64dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/avatar_placeholder"
            app:shapeAppearanceOverlay="@drawable/profile_avatar_border" />

        <ImageView
            android:id="@+id/editImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_edit_profile_image" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameProfileEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/profile_edit_hint_name_field"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black_800" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailProfileEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/profile_edit_hint_email_field"
        android:textColorHint="@color/black_800"
        android:gravity="center|start"
        android:paddingHorizontal="16dp"
        android:background="@drawable/profile_field_border"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Theme.News.Button.Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_edit_save_button" />
</LinearLayout>