<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profileAppBar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:background="@color/grey_300"
            android:layout_height="384dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:background="@drawable/profile_avatar_border"
                android:src="@drawable/avatar_placeholder"
                app:layout_collapseMode="parallax"
                tools:src="@color/purple_500" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/blue_700_08"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/profile_title"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/infoRecyclerView"
                android:background="@drawable/profile_info_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="24dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                style="@style/button_profile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/profile_edit_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourcesButton"
                style="@style/button_profile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/profile_sources_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/languagesButton"
                style="@style/button_profile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/profile_languages_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitButton"
                style="@style/button_profile_exit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/profile_exit_button" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>