<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:animateLayoutChanges="true"
    android:background="@color/blue_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/homePageToolbarProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avatar_placeholder_light" />

        <TextView
            android:id="@+id/homePageToolbarTitle"
            style="@style/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/home_page_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homePageToolbarProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/homePageToolbarFavorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_toolbar_favourite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homePageToolbarSearch"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/homePageToolbarSearch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_toolbar_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:visibility="gone"
        tools:alpha="1"
        tools:visibility="invisible">

        <LinearLayout
            android:id="@+id/homePageSearchContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/home_page_search_field_border"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/homePageToolbarSearchClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/homePageToolbarSearchIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_toolbar_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/homePageSearchEditText"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/home_page_search_field"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/homePageToolbarSearchClose"
            style="@style/toolbar_search"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/home_page_close_search_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>